Fix issue where query error was being cut off

--- a/src/client/components/card/CardsList.module.scss
+++ b/src/client/components/card/CardsList.module.scss
@@ -28,13 +28,11 @@
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   align-content: flex-start;
   justify-content: space-evenly;
-
   list-style: none;
   padding: 0.4rem 1.5rem;
   margin: 0;
   overflow-y: auto;
   width: 100%;
-  height: 100%;
   flex-grow: 1;
   gap: 0.75rem;
   border-top: 0.75rem solid;
