--- a/src/client/components/ui/QueryError.module.scss
+++ b/src/client/components/ui/QueryError.module.scss
@@ -6,9 +6,8 @@
   text-align: center;
   max-width: 100%;
   margin: auto;
-  padding: 0.5rem;
+  padding-top: 0.5rem;
   gap: 1rem;
-  overflow-y: scroll;
 
   &__label {
     margin: 0;
